# ontology-alignment

./: .gitignore  README.md  environment.yaml  pyproject.toml  run_all_oaei_anatomy_eval_experiments.sh  run_all_oaei_conf_eval_experiments.sh  run_all_veealign_datasets_eval_experiments.sh  run_all_veealign_datasets_nlfoa_eval_experiments.sh  run_all_veealign_loo_nlfoa_eval_experiments.sh
configurations/api/: config.yaml
configurations/eval_run_cfgs/oaei_anatomy/: sbert_baseline_eval_run_config_psg_default.yaml  sbert_baseline_eval_run_config_psg_english_sentence.yaml  sbert_baseline_eval_run_config_psg_english_sentence_no_relatives.yaml  sbert_baseline_eval_run_config_psg_english_sentence_only_name_and_desc.yaml  sbert_baseline_eval_run_config_psg_no_relatives.yaml  sbert_best_sts_eval_run_config_psg_default.yaml  (+7 more)
configurations/pseudo_sentence_generator/: psg_params_english_sentence.yaml  psg_params_english_sentence_no_relatives.yaml  psg_params_english_sentence_only_name.yaml  psg_params_english_sentence_only_name_and_desc.yaml  psg_params_no_relatives.yaml  psg_params_only_name_and_desc.yaml
configurations/train_cfgs/: no_train_nlfoa_sts-all-mpnet-base-v2.yaml
oaMeltEval/: pom.xml
oaMeltEval/oaei-resources/: configuration_oaei.txt
src/: scoring.py  util.py
src/api/: config.py  main.py
src/data/: alignment_format.py
src/model/: nlfoa.py  pseudo_sentence_encoder.py  similarity.py
src/scripts/: build_psg_cache.py  bulk_build_psg_caches.py  generate_eval_run_config_combinations.py  generate_merged_evaluation_report.py  run_oa_eval.py  train_nlfoa.py
(+819 files in other folders)
