[tool.poetry]
name = "ontology-alignment"
version = "0.0.1"
description = "ontology alignment with transformer-based models"
authors = ["IBM"]

[tool.poetry.dependencies]
python = "^3.8.5"
rdflib = "^6.1.1"
tqdm = "^4.64.0"
omegaconf = "^2.2.2"
pandas = "^1.4.3"
torch = "1.8.1"
sentence-transformers = "^2.2.2"
Cython = "^0.29.30"
Owlready2 = "^0.38"
fastapi = "^0.78.0"
uvicorn = "^0.18.2"
python-multipart = "^0.0.5"
pyarrow = "^8.0.0"
fastparquet = "^0.8.1"
tabulate = "^0.8.10"
py4j = "^0.10.9"

[tool.poetry.dev-dependencies]
jupyter = "^1.0.0"
jupyterlab = "^3.4.3"
flake8 = "^4.0.1"
autopep8 = "^1.6.0"
pytest = "^7.1.2"

[tool.pytest.ini_options]
pythonpath = ["src"]
log_cli = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
